<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_topLevelLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/main_bgd">

    <View
		android:id="@+id/tab_separator1"
		style="@style/tab_separatorLine"
		android:layout_alignParentTop="true"
		android:layout_height="1px"
		android:background="@color/main_fgd"/>

    <RelativeLayout
    	android:id="@+id/tab_sortbyBarLayout"
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:gravity="center_vertical"
    	android:layout_below="@+id/tab_separator1"
    	android:padding="2dp"
    	android:background="@color/main_bgd">

        <TextView
        	android:id="@+id/tab_sortOptionsHeading"
        	style="@style/tab_sortbyBarTextStyle"
        	android:layout_alignParentLeft="true"
        	android:text="Sort by:"
        	android:textStyle="bold"
        	android:paddingLeft="2dp"
        	android:paddingRight="10dp"/>
        <TextView
        	android:id="@+id/tab_sortOption1"
        	style="@style/tab_sortbyBarTextStyle"
        	android:layout_toRightOf="@+id/tab_sortOptionsHeading"
        	android:text="@string/StampbookSortByName"
        	android:clickable="true"
        	android:onClick="sortBy"/>
        <TextView
        	android:id="@+id/tab_sortOption2"
        	style="@style/tab_sortbyBarTextStyle"
        	android:layout_toRightOf="@+id/tab_sortOption1"
        	android:text="@string/StampbookSortByUsers"
        	android:clickable="true"
        	android:onClick="sortBy"/>
        <TextView
        	android:id="@+id/tab_sortOption3"
        	style="@style/tab_sortbyBarTextStyle"
        	android:layout_toRightOf="@+id/tab_sortOption2"
        	android:text="@string/StampbookSortByLocation"
        	android:clickable="true"
        	android:onClick="sortBy"/>

    </RelativeLayout>

    <View
		android:id="@+id/tab_separator2"
		style="@style/tab_separatorLine"
		android:layout_below="@+id/tab_sortbyBarLayout"/>

     <ListView
    	android:id="@+id/tab_list"
    	android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/tab_separator2"
        android:background="@color/main_bgd"/>

</RelativeLayout>